_sass/_typography.scss
@import 'https://fonts.googleapis.com/css?family=Abel:regular|Josefin Slab:regular|Open+Sans:300,400,600,700,800|Open Sans Condensed:700';

.standard {
  font-family: open sans, "Myriad Pro", Arial, Tahoma, Sans-Serif;
  margin: 35px 0;
  font-size: 23px;
  line-height: 36px;
  font-weight: lighter;
  letter-spacing: 3px;
  text-transform: uppercase;
  text-align: center;
  color: #83888D;
  span {
    color: #1c778f;
  }
}

a:hover {
  color: #1c778f;
}

p {
  color: #6b6b6b;
  font-family: open sans, "Myriad Pro", Arial, Tahoma, Sans-Serif;
  font-size: 14px;
}

input[type]:not([type="submit"]), textarea, select {
  color: #6b6b6b;
}

.color-primary, a.color-primary {
  color: #6b6b6b;
}

.color-secondary, a.color-secondary {
  color: #1c778f;
}

.x-small {
  font-size: 11px;
}

.small {
  font-size: 16px;
}

.medium {
  font-family: "Abel";
  font-size: 24px;
}

.large {
  font-family: "Abel";
  font-size: 25px;
}

.x-large {
  font-family: "Josefin Slab";
  font-size: 29px;
}

.xx-large {
  font-family: "Open Sans";
  font-size: 42px;
  font-weight: lighter;
}

.xxx-large {
  font-size: 65px;
}

.products-overview .tabs-title a {
  text-transform: lowercase;
}

.products-overview.tabs-content {
  h4 {
    font-size: 29px;
    margin-top: 50px;
    text-transform: uppercase;
  }
  h5 {
    font-size: 12px;
    margin-bottom: 5px;
    text-transform: uppercase;
  }
  p {
    font-size: 14px;
  }
}

